fixed some stuff commit

--- a/model/1_dataprep.ipynb
+++ b/model/1_dataprep.ipynb
@@ -1062,6 +1062,26 @@
    "source": [
     "sns.pairplot(train_subset.sample(50), hue=\"default_120_12m\", vars=original_features)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((603,), (603,), (9648, 14), (3015, 14), 12663)"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_subset.client_id.unique().shape, test_subset.client_id.unique().shape, train_subset.shape, test_subset.shape, train_subset.shape[0] + test_subset.shape[0]"
+   ]
   }
  ],
  "metadata": {
